# grid-server

./: docker-compose.yaml  node-manager
benches/: benches.rs
necklace-task-manager/: Cargo.toml
necklace-task-manager/job/: executor.py  job.py  reducer.py  splitter.py
necklace-task-manager/job/job/: __init__.py
necklace-task-manager/job/wit/: world.wit
necklace-task-manager/src/: cli.rs  command.rs  job.rs  job_data.rs  job_extractor.rs  main.rs  reducer.rs  splitter.rs  task_manager.rs
necklace-task-manager/src/endpoint_config/: certificate_provider.rs  endpoint_config.rs
necklace-task-manager/src/http_server/: job.rs  json_job_data.rs
node/: Cargo.toml  Dockerfile
node/executor/: Cargo.toml
node/executor/src/: main.rs
node/src/: cli.rs  client.rs  main.rs  node.rs  node_manager.rs  worker.rs
node/src/dll/: dll_executor.rs  dll_worker.rs  mod.rs
node/src/endpoint_config/: certificate_provider.rs  endpoint_config.rs
node/src/endpoint_config/certificates/: server_root_certificate.pem
node/src/wasm/: mod.rs  wasm_executor.rs  wasm_worker.rs
node/wit/: world.wit
node_manager/: Cargo.toml
node_manager/src/: cli.rs  command.rs  connection.rs  main.rs  node.rs  node_manager.rs  scheduler.rs
node_manager/src/http_server/: anyhow_error.rs  job.rs  json_job_data.rs  mod.rs
node_manager/src/server_config/: certificate_provider.rs  mod.rs  server_config.rs
node_manager/src/server_config/certificates/: client_private_key.pem
scheduler/: Cargo.toml  Dockerfile
scheduler/src/: cli.rs  command.rs  connection.rs  connection_manager.rs  main.rs  node_manager.rs  nodes.rs  scheduler.rs  task_manager.rs
scheduler/src/endpoint_config/: certificate_provider.rs  endpoint_config.rs
scheduler/src/http_server/: anyhow_error.rs  job.rs  json_job_data.rs  mod.rs
shared/: Cargo.toml
shared/src/: executor.rs  lib.rs  node.rs  node_manager.rs  scheduler.rs  task_manager.rs  worker.rs
shared/src/certificate/: mod.rs  verifier.rs
shared/src/node_manager/: manager_discovery.rs
shared/src/platform/: arch.rs  family.rs  mod.rs  os.rs
shared/src/task_manager/: job_data.rs  task.rs
shared/src/utils/: bin_codec.rs  bit_set.rs  buffer.rs  channel.rs  linked_vec_map.rs  linked_vec_set.rs  mod.rs  multilevel_vec_map.rs  priority_queue.rs  retry.rs  vec_map.rs
task_manager/: Cargo.toml  Dockerfile
task_manager/job/: Cargo.toml
task_manager/job/src/: bindings.rs  lib.rs  path_finding.rs
task_manager/src/: command.rs  job.rs  job_data.rs  main.rs  reducer.rs  scheduler.rs  splitter.rs  task.rs  task_manager.rs
task_manager/src/endpoint_config/: mod.rs
task_manager/src/http_server/: job.rs  json_job_data.rs  mod.rs
