[package]
name = "node_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
shared = { path = "../shared", features = ["node_manager", "certificate", "node", "bitset", "linked_list", "vec_map", "channel", "bincodec", "scheduler"] }
slab = "0.4.9"
mdns-sd = "0.10.5"
thiserror = "1.0.58"
anyhow = "1.0.81"
humantime = "2.1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio = { version = "1.36.0" , features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7.10", features = ["codec", "time" ] }
futures-sink = "0.3.30"
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rustls-pemfile = "1.0.4"
rustls = { version = "^0.21.0", features = ["dangerous_configuration"] }
x509-parser = "0.12.0"
uuid = { version = "1.8.0", features = ["v4"] }
quinn = { version = "0.10.2", features = [ "runtime-tokio","ring" ] }
futures-util = { version = "0.3.30", features = ["sink"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive", "env"] }
axum = "=0.7.4"
