[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
shared = { path = "../shared", features = ["scheduler" , "task_manager", "bincodec", "retry", "channel", "multilevel_vec_map", "bitset", "certificate", "worker"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.197", features = ["derive"] }
bitset-core = "0.1.1"
tokio = { version = "1.36.0" , features = ["macros", "rt-multi-thread", "net", "sync", "rt"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7.10", features = ["codec", "time" ] }
futures-sink = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
quinn = { version = "0.10.2", features = [ "runtime-tokio","ring" ] }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4",  features = ["derive", "env"] }
rustls = { version = "^0.21.0", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
rcgen = { version = "0.12.1" }
awaitable-bool = "0.1.2"
log = "0.4.21"
axum = { version = "=0.7.4", features = [] }
axum-macros = "0.4.1"