[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
shared.workspace = true
lru.workspace = true
libloading.workspace = true
interprocess.workspace = true
uuid.workspace = true
bincode.workspace = true
clap.workspace = true
