[package]
name = "job"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:job"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.197"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
shared = { path = "../../shared", features = ["task_manager", "multilevel_vec_map", "bitset"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"


